# vyre

./: .gitattributes  .gitignore  ADVERSARIAL_TEST_STRATEGY.md  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  cargo_full  deny.toml
conform/vyre-conform-enforce/: Cargo.toml  README.md
conform/vyre-conform-generate/: Cargo.toml  README.md
conform/vyre-conform-runner/: CONFIG.md  Cargo.toml  README.md
conform/vyre-conform-spec/: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: dispatch.rs
vyre-bench/: .gitattributes  AGENT_TASKS.md  CHANGELOG.md  Cargo.toml  README.md  RELEASE_BRIEF.md  SCHEMA.md  UPGRADE_PLAN_2026-04-30.md  competitors.toml
vyre-bench/.audits/: PLAN.md
vyre-bench/benches/: release.rs
vyre-bench/competitors/: Cargo.toml  README.md
vyre-bench/scripts/: fetch_honest_corpus.sh
vyre-bench/src/: cli.rs  lib.rs  main.rs  release_matrix.rs
vyre-bench/tests/: baseline_determinism.rs  benchmark_hygiene.rs  cross_emitter_property.rs  dfa_full_coverage.rs  full_pipeline_snapshot.rs  g10_cross_backend.rs  g12_cli.rs  g1_cuda_events.rs  g2_tail_latency.rs  g3_determinism.rs  g5_cache_hit.rs  g6_snapshot.rs  g7_thermal.rs  g9_sweep.rs  min_samples_gate.rs  nvme_gpu_ingest_telemetry.rs  perf_analyses_snapshot.rs  release_bench_release_macro.rs  release_macro_cuda_live.rs  release_matrix_contracts.rs  result_schema.rs  suite_completeness.rs  thesis_workload_contracts.rs  throughput_consistency.rs
vyre-core/: ARCHITECTURE.md  Cargo.toml  PUBLIC_API.md  README.md
vyre-core/examples/: vyre_core_release_surface.rs
vyre-core/src/: lib.rs
vyre-core/tests/: SKILL.md  cross_crate_perf_contracts.rs  dependency_boundary.rs  gpu_boundary_contracts.rs  ops.rs  wire_malformed_adversarial.rs  wire_v1_round_trip.rs
vyre-debug/: AGENT_PLAN.md  Cargo.toml  README.md  SPEC_NAGA_FAILURE_TRIAGE.md
vyre-debug/examples/: vyre_debug_release_surface.rs
vyre-debug/src/: carriers.rs  dangling.rs  descriptor_diff.rs  descriptor_dump.rs  fixtures.rs  lib.rs  naga_dump.rs  naga_trace.rs  path_map_serde.rs  source_walker.rs  wgsl.rs
vyre-debug/tests/: carriers_tests.rs  cli_tests.rs  dangling_tests.rs  descriptor_diff_tests.rs  descriptor_dump_tests.rs  generated_descriptor_diff_matrix.rs  well_formed_lowering_contracts.rs  wgsl_tests.rs
vyre-driver-cuda/: ARCHITECTURE.md  Cargo.toml  README.md
vyre-driver-cuda/examples/: cuda_release_surface.rs
vyre-driver-cuda/src/: aot_launcher.rs  benchmark_pass_selection.rs  codegen.rs  device.rs  device_diagnostic_aggregation.rs  device_work_queue.rs  egraph_device_image.rs  egraph_kernel_plan.rs  egraph_readback.rs  frontier_typed_ir_adapter.rs  input_identity.rs  instrumentation.rs  jit_cache.rs  kernel_failure_diagnostics.rs  launch_fusion.rs  lib.rs  megakernel_barrier_planner.rs  megakernel_convergence.rs  megakernel_plan_cache.rs  megakernel_scheduler.rs  megakernel_speedup_gate.rs  multi_query_execution.rs  numeric.rs  occupancy.rs  optimizer.rs  pipeline.rs  profiler.rs  resident_graph_session.rs  result_compaction.rs  stream.rs  synthetic_device_caps.rs  token_fact_frontier_execution.rs  token_fact_graph_cuda_adapter.rs
vyre-driver-cuda/templates/: cuda_ffi.rs.tmpl  nccl_ffi.rs.tmpl
vyre-driver-cuda/tests/: adaptive_sparse_queue_generated_gpu_parity.rs  adaptive_traverse_vast_walk_gpu_parity.rs  aot_launcher_contracts.rs  autodiff_cuda_parity.rs  bellman_tn_order_gpu_parity.rs  binding_plan_contracts.rs  bitset_pairwise_gpu_parity.rs  bitset_popcount_gpu_parity.rs  bitset_primitives_gpu_parity.rs  borrowck_reachability_cuda.rs  byte_histogram_utf8_shape_gpu_parity.rs  c_preprocess_filter_cuda.rs  c_preprocess_macro_expansion_cuda.rs  c_preprocess_payloads_cuda.rs  c_preprocess_tokenize_cuda.rs  capability_contracts.rs  causal_graph_primitives_gpu_parity.rs  char_class_bracket_match_gpu_parity.rs  closure_gpu_parity.rs  cooperative_launch_contracts.rs  csr_backward_or_changed_gpu_parity.rs  csr_backward_traverse_gpu_parity.rs  csr_bidirectional_gpu_parity.rs  csr_forward_or_changed_gpu_parity.rs  csr_frontier_degree_sum_gpu_parity.rs  csr_frontier_queue_gpu_parity.rs  csr_frontier_queue_word_prefix_multiblock_gpu_parity.rs  csr_queue_split_gpu_parity.rs  csr_queue_strided_gpu_parity.rs  cuda_device_contract.rs  cuda_external_probe_contract.rs  cuda_ffi_template_contracts.rs  cuda_graph_dispatch_parity.rs  cuda_release_surface_contracts.rs  decode_hex_gpu_parity.rs  dispatch_overhead_breakdown.rs  dispatch_overhead_profile.rs  dominator_frontier_gpu_parity.rs  egraph_device_image_upload.rs  encoding_classify_gpu_parity.rs  (+71 more)
vyre-driver-metal/: Cargo.toml  README.md
vyre-driver-metal/src/: lib.rs  runtime.rs
vyre-driver-reference/: Cargo.toml  README.md
vyre-driver-reference/examples/: vyre_driver_reference_release_surface.rs
vyre-driver-reference/src/: lib.rs
vyre-driver-spirv/: ARCHITECTURE.md  Cargo.toml  README.md
vyre-driver-wgpu/: ARCHITECTURE.md  CONFIG.md  Cargo.toml  PUBLIC_API.md  README.md  build.rs
vyre-emit-metal/: Cargo.toml  README.md
vyre-emit-ptx/: Cargo.toml  README.md
vyre-foundation/: ARCHITECTURE.md  Cargo.toml  PUBLIC_API.md  README.md  VALIDATOR_ERRORS.md
vyre-frontend-c/: ARCHITECTURE.md  CONFIG.md  Cargo.toml  MATURITY.md  README.md
vyre-frontend-rust/: Cargo.toml  DESIGN.md  MATURITY.md
vyre-harness/: ARCHITECTURE.md  Cargo.toml  README.md
vyre-libs/: ARCHITECTURE.md  AUTHORING.md  Cargo.toml  README.md  findings.toml
vyre-lints/: Cargo.toml  README.md  allowlist.toml
vyre-lower/: Cargo.toml  README.md
vyre-macros/: ARCHITECTURE.md  Cargo.toml  README.md  ast_test.rs
vyre-primitives/: ARCHITECTURE.md  Cargo.toml  PUBLIC_API.md  README.md
vyre-reference/: ARCHITECTURE.md  Cargo.toml  README.md
vyre-runtime/: ARCHITECTURE.md  Cargo.toml  README.md
vyre-self-substrate/: Cargo.toml  README.md
vyre-spec/: ARCHITECTURE.md  Cargo.toml  OPDEF_CONTRACT.md  PUBLIC_API.md  README.md
xtask/: CONFIG.md  Cargo.toml  README.md
(+4620 files in other folders)
