[package]
name = "vyre-driver-cuda"
version = "0.6.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/vyre-driver-cuda"
description = "CUDA/PTX backend for vyre through the CUDA driver API."
readme = "README.md"
keywords = ["gpu", "compute", "cuda", "ptx", "vyre"]
categories = ["hardware-support"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[features]
default = []
cuda = []

[dependencies]
vyre-driver = { workspace = true }
vyre-foundation = { workspace = true }
vyre-spec = { workspace = true }
vyre-lower.workspace = true
vyre-emit-ptx.workspace = true
# `optimizer` module dispatches the self-hosted optimizer passes
# (DCE/CSE/const-fold) on CUDA. Lives in [dependencies] (not dev-deps)
# because src/optimizer.rs is shipped lib code.
vyre-self-substrate = { workspace = true }
inventory.workspace = true
tracing.workspace = true
blake3.workspace = true
bytemuck.workspace = true
smallvec.workspace = true
cudarc.workspace = true
rustc-hash.workspace = true
crossbeam-queue = { workspace = true }
dashmap.workspace = true
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
vyre = { path = "../vyre-core" }
vyre-reference = { path = "../vyre-reference" }
vyre-primitives = { path = "../vyre-primitives", features = ["decode", "math", "text", "cpu-parity"] }
vyre-self-substrate = { path = "../vyre-self-substrate", features = ["cpu-parity"] }
vyre-libs = { path = "../vyre-libs", features = ["c-parser"] }
pollster.workspace = true
