[package]
name = "vyre-driver-spirv"
version = "0.6.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "SPIR-V backend for vyre through naga's SPIR-V writer."
readme = "README.md"
keywords = ["gpu", "compute", "spirv", "vulkan", "vyre"]
categories = ["hardware-support", "rendering::graphics-api"]
documentation = "https://docs.rs/vyre-driver-spirv"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
vyre-driver = { workspace = true }
vyre-foundation = { workspace = true }
vyre-spec = { workspace = true }
vyre-lower = { workspace = true }
vyre-emit-naga = { workspace = true }
naga = { workspace = true, features = ["spv-out"] }
inventory.workspace = true
ash.workspace = true
smallvec = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
vyre-reference = { workspace = true }
