[package]
name = "vyre-driver-wgpu"
version = "0.4.2"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "wgpu backend for vyre IR  -  implements VyreBackend, owns GPU runtime, buffer pool, pipeline cache"
readme = "README.md"
keywords = ["gpu", "wgpu", "ir", "backend", "vyre"]
categories = ["graphics", "rendering::graphics-api", "hardware-support"]
documentation = "https://docs.rs/vyre-wgpu"

[features]
default = []
wgpu = []
parity-testing = []
c-parser = ["vyre-libs/c-parser"]
math-linalg = ["vyre-libs/math-linalg"]
math-scan = ["vyre-libs/math-scan"]
nn-attention = ["vyre-libs/nn-attention"]
matching-substring = ["vyre-libs/matching-substring"]
matching-dfa = ["vyre-libs/matching-dfa"]
matching-nfa = ["vyre-libs/matching-nfa"]
megakernel-batch = ["vyre-runtime/megakernel-batch"]
uring-cmd-nvme = ["vyre-runtime/uring-cmd-nvme"]

[dependencies]
vyre-driver = { workspace = true, features = ["self-substrate-adapters"] }
vyre-runtime = { workspace = true, features = ["self-substrate-adapters"] }
vyre-foundation = { workspace = true }
vyre-self-substrate = { workspace = true }
vyre-spec = { workspace = true }
vyre-lower.workspace = true
vyre-emit-naga.workspace = true
naga = { workspace = true, features = ["wgsl-out", "spv-out"] }
wgpu.workspace = true
pollster.workspace = true
bytemuck.workspace = true
crossbeam-queue = { workspace = true }
crossbeam-channel.workspace = true
arc-swap = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing.workspace = true
thiserror.workspace = true
rustc-hash.workspace = true
blake3.workspace = true
serde.workspace = true
toml.workspace = true
inventory.workspace = true
dashmap = { workspace = true }
smallvec.workspace = true
crc32fast = { workspace = true }
fs2.workspace = true
libm.workspace = true
bincode = { workspace = true }

[dev-dependencies]
criterion.workspace = true
stats_alloc.workspace = true
tokio.workspace = true
tempfile.workspace = true
proptest.workspace = true
vyre.workspace = true
vyre-harness.workspace = true
vyre-self-substrate = { workspace = true }
vyre-libs = { workspace = true, features = ["matching", "parsing", "c-parser", "nn-attention", "cpu-parity"] }
vyre-primitives = { workspace = true, default-features = false, features = ["graph", "predicate", "cpu-parity"] }
vyre-reference = { workspace = true, features = ["subgroup-ops"] }
vyre-runtime = { workspace = true, features = ["self-substrate-adapters"] }
vyre-test-harness.workspace = true
vyre-intrinsics.workspace = true
tracing-subscriber.workspace = true
libc.workspace = true
c-grammar-gen.workspace = true
tree-sitter = { workspace = true }
tree-sitter-go = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true



[[bin]]
name = "vyre-wgpu"
path = "src/bin/vyre.rs"
