[package]
name = "vyre-foundation"
version = "0.4.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Foundation layer: IR, type system, memory model, wire format. Zero application semantics. Part of the vyre GPU compiler."
readme = "README.md"
keywords = ["gpu", "ir", "compiler", "wgsl", "vyre"]
categories = ["algorithms", "compilers", "hardware-support"]
documentation = "https://docs.rs/vyre-foundation"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
serde = []

[dependencies]
dashmap = { workspace = true }
vyre-spec.workspace = true
vyre-macros.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
rustc-hash.workspace = true
hashbrown.workspace = true
smallvec.workspace = true
blake3.workspace = true
bytemuck.workspace = true
inventory.workspace = true
lasso.workspace = true
bumpalo.workspace = true
im.workspace = true
libm.workspace = true
itoa.workspace = true
ryu.workspace = true
arrayvec.workspace = true

[lints]
workspace = true

[dev-dependencies]
# Doctests in this crate reach through the `vyre` meta-shim (that's how
# every downstream consumer spells the imports in their own doctests), so
# the shim must be in scope at test time. Dev-dep only; the library has
# no runtime dependency on `vyre`.
vyre = { workspace = true }
vyre-reference.workspace = true
proptest.workspace = true
criterion.workspace = true

