[package]
name = "vyre-frontend-rust"
version = "0.6.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

description = "GPU-first Rust parser and compile-evidence driver for Vyre."
keywords = ["rust", "compiler", "gpu", "vyre", "parser"]
categories = ["compilers", "development-tools"]

[dependencies]
vyre = { workspace = true }
vyre-foundation = { workspace = true }
vyre-driver = { workspace = true }
vyre-driver-wgpu = { workspace = true }
vyre-primitives = { workspace = true }
vyre-libs = { workspace = true, features = ["rust-parser"] }
vyre-runtime = { workspace = true }

thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, optional = true }
smallvec = { workspace = true }

[target.'cfg(not(target_os = "macos"))'.dependencies]
vyre-driver-cuda = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
vyre-reference = { workspace = true }
vyre-driver-reference = { workspace = true }
# CPU oracle: the official rustc lexer. Test-only differential against the
# reusable Rust lexer substrate; not a runtime dependency of the frontend.
rustc_lexer = { workspace = true }

[features]
default = []
# Enable serde for evidence serialization.
serde = ["dep:serde"]

[lints]
workspace = true
