[package]
name = "vyre-harness"
version = "0.4.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Universal Cat-A op harness registry: OpEntry, ConvergenceContract, FixpointContract, UniversalDiffExemption  -  the registry types every vyre-built library publishes through."
readme = "README.md"
keywords = ["vyre", "gpu", "harness", "registry"]
categories = ["development-tools::testing"]
documentation = "https://docs.rs/vyre-harness"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
strict-fp = []

[dependencies]
vyre.workspace = true
vyre-foundation.workspace = true
inventory.workspace = true

[dev-dependencies]
proptest.workspace = true
vyre-self-substrate.workspace = true
vyre-primitives = { workspace = true }
